// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkDataTableHeader does not render sort icons if sorting disabled 1`] = `
<DocumentFragment>
  <div
    data-backpack-ds-component="DataTableHeader"
  >
    <span
      aria-label="Name"
      aria-pressed="false"
      role="button"
      tabindex="0"
    >
      Name
    </span>
  </div>
</DocumentFragment>
`;

exports[`BpkDataTableHeader renders sort icon with down icon selected 1`] = `
<DocumentFragment>
  <div
    data-backpack-ds-component="DataTableHeader"
  >
    <span
      aria-label="Name"
      aria-pressed="true"
      role="button"
      tabindex="0"
    >
      Name
    </span>
    <div
      aria-hidden="true"
      class="bpk-data-table-column__sort-icons"
    >
      <div
        class="bpk-data-table-column__sort-icon--up bpk-data-table-column__sort-icon"
      >
        <svg
          aria-hidden="true"
          class="bpk-icon--rtl-support"
          height="1rem"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291"
          />
        </svg>
      </div>
      <div
        class="bpk-data-table-column__sort-icon--down bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--selected"
      >
        <svg
          aria-hidden="true"
          class="bpk-icon--rtl-support"
          height="1rem"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkDataTableHeader renders sort icon with up icon selected 1`] = `
<DocumentFragment>
  <div
    data-backpack-ds-component="DataTableHeader"
  >
    <span
      aria-label="Name"
      aria-pressed="true"
      role="button"
      tabindex="0"
    >
      Name
    </span>
    <div
      aria-hidden="true"
      class="bpk-data-table-column__sort-icons"
    >
      <div
        class="bpk-data-table-column__sort-icon--up bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--selected"
      >
        <svg
          aria-hidden="true"
          class="bpk-icon--rtl-support"
          height="1rem"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291"
          />
        </svg>
      </div>
      <div
        class="bpk-data-table-column__sort-icon--down bpk-data-table-column__sort-icon"
      >
        <svg
          aria-hidden="true"
          class="bpk-icon--rtl-support"
          height="1rem"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkDataTableHeader renders sort icons 1`] = `
<DocumentFragment>
  <div
    data-backpack-ds-component="DataTableHeader"
  >
    <span
      aria-label="Name"
      aria-pressed="false"
      role="button"
      tabindex="0"
    >
      Name
    </span>
    <div
      aria-hidden="true"
      class="bpk-data-table-column__sort-icons"
    >
      <div
        class="bpk-data-table-column__sort-icon--up bpk-data-table-column__sort-icon"
      >
        <svg
          aria-hidden="true"
          class="bpk-icon--rtl-support"
          height="1rem"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291"
          />
        </svg>
      </div>
      <div
        class="bpk-data-table-column__sort-icon--down bpk-data-table-column__sort-icon"
      >
        <svg
          aria-hidden="true"
          class="bpk-icon--rtl-support"
          height="1rem"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
